--- a/week10/day2--tailwind/dash2/src/index.css
+++ b/week10/day2--tailwind/dash2/src/index.css
@@ -14,7 +14,7 @@
 .line {
   width: 100%;
   height: 5px;
-  background: #243c5a;
+  background: #FF6D00;
   position: absolute;
   left: 0;
   transition: all 0.2s ease-in-out;
@@ -39,9 +39,9 @@ nav.active {
 }
 
 .selected {
-  color: #243c5a;
+  color: #FF6D00;
   background-color: white;
-  font: bold;
+  font-weight: bold;
 }
 
 .hamburger.active .line:nth-child(1) {
